BinDiff: UI: Rework directory diff
- Ask for disassembler dir if unset
- Improve error message madness
- Separate button listeners
- Fix accidental recursion in `getBinDiffEngine()`
- Replace odd `String.format("%s%s%s",...` with `Path.of(...` in places

PiperOrigin-RevId: 357211047
Change-Id: I0536b96f83144657e7c7486a72082a9547413a5b